--- a/info.plist
+++ b/info.plist
@@ -4689,11 +4689,13 @@ Output:
 		<string>tasks_heading</string>
 		<string>task_tag</string>
 		<string>daily_folder</string>
-		<string>searches_heading</string>
+		<string>vault_path</string>
 		<string>journal_tag</string>
+		<string>title</string>
+		<string>searches_heading</string>
 		<string>tasks_file</string>
 		<string>vault_name</string>
-		<string>vault_path</string>
+		<string>url</string>
 	</array>
 	<key>version</key>
 	<string>2.2.1</string>
