--- a/info.plist
+++ b/info.plist
@@ -182,18 +182,7 @@
 			</dict>
 		</array>
 		<key>328F7F6F-FA2A-4658-9494-6EDDEEDD0EED</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>AFD9C286-D381-4D08-A1F2-3CAC9CA012D7</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>32C29380-4EBC-4BCA-917C-038BCAB23913</key>
 		<array>
 			<dict>
@@ -503,18 +492,7 @@
 		<key>614F07F6-4B10-43E0-A998-8C85952D75A3</key>
 		<array/>
 		<key>65933EB2-9F0E-4DA1-B167-598004DC247A</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>AFD9C286-D381-4D08-A1F2-3CAC9CA012D7</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
+		<array/>
 		<key>69580EB9-4634-4BEA-AE49-6881DDCD0D8C</key>
 		<array>
 			<dict>
@@ -1045,19 +1023,6 @@
 			<dict>
 				<key>destinationuid</key>
 				<string>32C29380-4EBC-4BCA-917C-038BCAB23913</string>
-				<key>modifiers</key>
-				<integer>0</integer>
-				<key>modifiersubtext</key>
-				<string></string>
-				<key>vitoclose</key>
-				<false/>
-			</dict>
-		</array>
-		<key>E8EAD1DE-928E-4955-9BBD-3CDAA3B3492C</key>
-		<array>
-			<dict>
-				<key>destinationuid</key>
-				<string>AFD9C286-D381-4D08-A1F2-3CAC9CA012D7</string>
 				<key>modifiers</key>
 				<integer>0</integer>
 				<key>modifiersubtext</key>
@@ -3105,27 +3070,6 @@ sys.stdout.write(out)</string>
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>argumenttype</key>
-				<integer>2</integer>
-				<key>keyword</key>
-				<string>ou-cache</string>
-				<key>subtext</key>
-				<string></string>
-				<key>text</key>
-				<string>Rebuild Related Notes cache.</string>
-				<key>withspace</key>
-				<false/>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.input.keyword</string>
-			<key>uid</key>
-			<string>E8EAD1DE-928E-4955-9BBD-3CDAA3B3492C</string>
-			<key>version</key>
-			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>lastpathcomponent</key>
 				<false/>
 				<key>onlyshowifquerypopulated</key>
@@ -3164,29 +3108,6 @@ sys.stdout.write(out)</string>
 			<string>40F90A4E-72B0-49DF-B10C-DF351C19C05A</string>
 			<key>version</key>
 			<integer>1</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>0</integer>
-				<key>script</key>
-				<string></string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string>scripts/build_cache.py</string>
-				<key>type</key>
-				<integer>8</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>AFD9C286-D381-4D08-A1F2-3CAC9CA012D7</string>
-			<key>version</key>
-			<integer>2</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -3564,6 +3485,10 @@ This is an [Alfred](https://alfredapp.com) workflow containing various actions t
 ---
 
 ## Release Notes
+
+### v2.3.0
+- Refactored Related Notes so that it doesn't depend so much on external python packages.
+- Significantly cut back on workflow size
 
 ### v2.2.0
 - Type `/related` anywere on your note and the workflow will insert a list of related notes, based on content similarity. It may take some time, though. Like, 10 seconds on a newish macbook and 2000+ notes.
@@ -4341,17 +4266,6 @@ Output:
 			<key>ypos</key>
 			<integer>1010</integer>
 		</dict>
-		<key>AFD9C286-D381-4D08-A1F2-3CAC9CA012D7</key>
-		<dict>
-			<key>colorindex</key>
-			<integer>8</integer>
-			<key>note</key>
-			<string>rebuild cache</string>
-			<key>xpos</key>
-			<integer>3010</integer>
-			<key>ypos</key>
-			<integer>3565</integer>
-		</dict>
 		<key>B1C517F8-6E04-4D3B-8C0C-CD9C208B6934</key>
 		<dict>
 			<key>xpos</key>
@@ -4469,13 +4383,6 @@ Output:
 			<key>ypos</key>
 			<integer>420</integer>
 		</dict>
-		<key>E8EAD1DE-928E-4955-9BBD-3CDAA3B3492C</key>
-		<dict>
-			<key>xpos</key>
-			<integer>3005</integer>
-			<key>ypos</key>
-			<integer>3395</integer>
-		</dict>
 		<key>E9EE3256-7694-44A4-B076-BDDAC5002701</key>
 		<dict>
 			<key>colorindex</key>
@@ -4500,6 +4407,9 @@ Output:
 		<dict>
 			<key>colorindex</key>
 			<integer>8</integer>
+			<key>note</key>
+			<string>doc-similarity-lite python module by dancromartie
+https://github.com/dancromartie/doc-similarity-lite</string>
 			<key>xpos</key>
 			<integer>2025</integer>
 			<key>ypos</key>
@@ -4565,10 +4475,6 @@ Output:
 		<string>Notas Diárias</string>
 		<key>journal_tag</key>
 		<string>diário</string>
-		<key>related_ignore_words</key>
-		<string>tags aliases meta</string>
-		<key>related_max_results</key>
-		<string>10</string>
 		<key>searches_heading</key>
 		<string>Pesquisas</string>
 		<key>task_tag</key>
@@ -4591,13 +4497,13 @@ Output:
 		<string>tasks_heading</string>
 		<string>task_tag</string>
 		<string>daily_folder</string>
-		<string>url</string>
+		<string>vault_path</string>
 		<string>journal_tag</string>
 		<string>title</string>
-		<string>vault_name</string>
-		<string>vault_path</string>
 		<string>searches_heading</string>
 		<string>tasks_file</string>
+		<string>vault_name</string>
+		<string>url</string>
 	</array>
 	<key>version</key>
 	<string>2.3.0</string>
